--- a/Resources/views/default.html.twig
+++ b/Resources/views/default.html.twig
@@ -6,7 +6,7 @@
 
             <li {% if app.request.locale == locale %}class="active"{% endif %}>
                 <a href="javascript:void(0)" data-toggle="tab" data-target=".a2lix_translationsFields-{{ locale }}">
-                   {{ locale|capitalize }}
+                   {{ locale|capitalize|trans }}
                 </a>
             </li>
         {% endfor %}
@@ -40,7 +40,8 @@
 
                     <li {% if app.request.locale == locale %}class="active"{% endif %}>
                         <a href="javascript:void(0)" data-toggle="tab" data-target=".a2lix_translationsFields-{{ locale }}">
-                            {{ locale|capitalize }} {% if isDefaultLocale %}[Default]{% endif %}
+                            {{ locale|capitalize|trans }}
+                            {% if isDefaultLocale %}{{ '[Default]'|trans }}{% endif %}
                         </a>
                     </li>
                 {% endfor %}
